Finish prototype for ResultsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,12 @@
 <resources>
 
     <string name="acc_logo">MWS logo</string>
-
     <string name="app_name">MathWebSearch</string>
     <string name="hint_text">Search text</string>
     <string name="hint_latex">Search latex</string>
     <string name="btn_search">Search</string>
+    <string name="title_activity_results">ResultsActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
