--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Accessibility Descriptions -->
     <string name="acc_logo">MWS logo</string>
     <string name="acc_fillin">Fill in an example</string>
+    <string name="acc_status">Status color</string>
 
     <string name="app_name">MathWebSearch</string>
     <string name="hint_text">Search text</string>
@@ -10,5 +12,6 @@
     <string name="btn_search">Search</string>
     <string name="title_activity_results">ResultsActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="initialStatusDescr">Initializing&#8230;</string>
 
 </resources>
